--- a/test/data/vcr_cassettes/Clever_APIOperations_List/finds_school_admins_by_page.yml
+++ b/test/data/vcr_cassettes/Clever_APIOperations_List/finds_school_admins_by_page.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.clever.com/v1.1/districts
+    uri: https://api.clever.com/v1.1/school_admins
     body:
       encoding: US-ASCII
       string: ''
@@ -29,7 +29,7 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 26 Sep 2015 17:40:54 GMT
+      - Sat, 26 Sep 2015 17:40:50 GMT
       X-Powered-By:
       - Express
       X-Ratelimit-Bucket:
@@ -37,21 +37,21 @@ http_interactions:
       X-Ratelimit-Limit:
       - '1200'
       X-Ratelimit-Remaining:
-      - '1180'
+      - '1190'
       X-Ratelimit-Reset:
       - '1443289303'
       Content-Length:
-      - '217'
+      - '352'
       Connection:
       - keep-alive
     body:
       encoding: UTF-8
-      string: '{"data":[{"data":{"name":"Demo District","id":"4fd43cc56d11340000000005"},"uri":"/v1.1/districts/4fd43cc56d11340000000005"}],"paging":{"current":1,"total":1,"count":1},"links":[{"rel":"self","uri":"/v1.1/districts"}]}'
-    http_version: 
-  recorded_at: Sat, 26 Sep 2015 17:40:54 GMT
+      string: '{"data":[{"data":{"district":"4fd43cc56d11340000000005","email":"thinkerton@example.com","name":{"first":"Think","last":"Thinkerton"},"schools":["530e595026403103360ff9fd"],"staff_id":"1212","title":"Principal","id":"5601b814141fd30001000017"},"uri":"/v1.1/school_admins/5601b814141fd30001000017"}],"links":[{"rel":"self","uri":"/v1.1/school_admins"}]}'
+    http_version:
+  recorded_at: Sat, 26 Sep 2015 17:40:51 GMT
 - request:
     method: get
-    uri: https://api.clever.com/v1.1/districts?count=true
+    uri: https://api.clever.com/v1.1/school_admins?count=true
     body:
       encoding: US-ASCII
       string: ''
@@ -78,7 +78,7 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 26 Sep 2015 17:40:54 GMT
+      - Sat, 26 Sep 2015 17:40:51 GMT
       X-Powered-By:
       - Express
       X-Ratelimit-Bucket:
@@ -86,16 +86,16 @@ http_interactions:
       X-Ratelimit-Limit:
       - '1200'
       X-Ratelimit-Remaining:
-      - '1179'
+      - '1189'
       X-Ratelimit-Reset:
       - '1443289303'
       Content-Length:
-      - '71'
+      - '75'
       Connection:
       - keep-alive
     body:
       encoding: UTF-8
-      string: '{"count":1,"links":[{"rel":"self","uri":"/v1.1/districts?count=true"}]}'
-    http_version: 
-  recorded_at: Sat, 26 Sep 2015 17:40:55 GMT
+      string: '{"count":1,"links":[{"rel":"self","uri":"/v1.1/school_admins?count=true"}]}'
+    http_version:
+  recorded_at: Sat, 26 Sep 2015 17:40:51 GMT
 recorded_with: VCR 2.9.3
