--- a/test/data/vcr_cassettes/Clever_District_without_global_token/pages_methods/pages_a_district_s_schools.yml
+++ b/test/data/vcr_cassettes/Clever_District_without_global_token/pages_methods/pages_a_district_s_schools.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.clever.com/v1.1/districts/4fd43cc56d11340000000005?
+    uri: https://api.clever.com/v1.1/districts/4fd43cc56d11340000000005
     body:
       encoding: US-ASCII
       string: ''
     headers:
       Accept:
-      - '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -25,15 +25,21 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 30 Sep 2014 19:54:14 GMT
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:53 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1172'
+      X-Ratelimit-Reset:
+      - '1443289122'
       Content-Length:
       - '518'
       Connection:
@@ -42,7 +48,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"data":{"name":"Demo District","id":"4fd43cc56d11340000000005"},"links":[{"rel":"self","uri":"/v1.1/districts/4fd43cc56d11340000000005"},{"rel":"schools","uri":"/v1.1/districts/4fd43cc56d11340000000005/schools"},{"rel":"teachers","uri":"/v1.1/districts/4fd43cc56d11340000000005/teachers"},{"rel":"students","uri":"/v1.1/districts/4fd43cc56d11340000000005/students"},{"rel":"sections","uri":"/v1.1/districts/4fd43cc56d11340000000005/sections"},{"rel":"events","uri":"/v1.1/districts/4fd43cc56d11340000000005/events"}]}'
     http_version: 
-  recorded_at: Tue, 30 Sep 2014 19:54:15 GMT
+  recorded_at: Sat, 26 Sep 2015 17:37:53 GMT
 - request:
     method: get
     uri: https://api.clever.com//v1.1/districts/4fd43cc56d11340000000005/schools?limit=100000
@@ -51,7 +57,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -68,17 +74,21 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 30 Sep 2014 19:54:15 GMT
-      Etag:
-      - '"-1820526720"'
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:53 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1171'
+      X-Ratelimit-Reset:
+      - '1443289122'
       Content-Length:
       - '1812'
       Connection:
@@ -96,7 +106,7 @@ http_interactions:
         Middle School","nces_id":"360001000000","phone":"(718) 555-8989","principal":{"name":"Leonard
         Springsteen","email":"lspringsteen@mailinator.com"},"school_number":"27Q321","sis_id":"27Q321","state_id":"412","id":"530e595026403103360ff9ff"},"uri":"/v1.1/schools/530e595026403103360ff9ff"}],"paging":{"current":1,"total":1,"count":3},"links":[{"rel":"self","uri":"/v1.1/districts/4fd43cc56d11340000000005/schools?limit=100000"}]}'
     http_version: 
-  recorded_at: Tue, 30 Sep 2014 19:54:15 GMT
+  recorded_at: Sat, 26 Sep 2015 17:37:54 GMT
 - request:
     method: get
     uri: https://api.clever.com//v1.1/districts/4fd43cc56d11340000000005/schools?limit=2
@@ -105,7 +115,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -122,17 +132,21 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 30 Sep 2014 19:54:15 GMT
-      Etag:
-      - '"1588311031"'
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:54 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1170'
+      X-Ratelimit-Reset:
+      - '1443289122'
       Content-Length:
       - '1363'
       Connection:
