--- a/test/data/vcr_cassettes/Clever_District_without_global_token/pages_methods/pages_a_district_s_sections.yml
+++ b/test/data/vcr_cassettes/Clever_District_without_global_token/pages_methods/pages_a_district_s_sections.yml
@@ -2,13 +2,13 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.clever.com/v1.1/districts/4fd43cc56d11340000000005?
+    uri: https://api.clever.com/v1.1/districts/4fd43cc56d11340000000005
     body:
       encoding: US-ASCII
       string: ''
     headers:
       Accept:
-      - '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -25,15 +25,21 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 30 Sep 2014 19:54:34 GMT
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:51 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1178'
+      X-Ratelimit-Reset:
+      - '1443289122'
       Content-Length:
       - '518'
       Connection:
@@ -42,7 +48,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"data":{"name":"Demo District","id":"4fd43cc56d11340000000005"},"links":[{"rel":"self","uri":"/v1.1/districts/4fd43cc56d11340000000005"},{"rel":"schools","uri":"/v1.1/districts/4fd43cc56d11340000000005/schools"},{"rel":"teachers","uri":"/v1.1/districts/4fd43cc56d11340000000005/teachers"},{"rel":"students","uri":"/v1.1/districts/4fd43cc56d11340000000005/students"},{"rel":"sections","uri":"/v1.1/districts/4fd43cc56d11340000000005/sections"},{"rel":"events","uri":"/v1.1/districts/4fd43cc56d11340000000005/events"}]}'
     http_version: 
-  recorded_at: Tue, 30 Sep 2014 19:54:34 GMT
+  recorded_at: Sat, 26 Sep 2015 17:37:51 GMT
 - request:
     method: get
     uri: https://api.clever.com//v1.1/districts/4fd43cc56d11340000000005/sections?limit=100000
@@ -51,7 +57,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -68,17 +74,23 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 30 Sep 2014 19:54:34 GMT
+      - Sat, 26 Sep 2015 17:37:51 GMT
       Etag:
-      - '"-317608596"'
-      Server:
-      - nginx/1.4.7
+      - '"501176679"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1177'
+      X-Ratelimit-Reset:
+      - '1443289122'
       Content-Length:
       - '460242'
       Connection:
@@ -1028,7 +1040,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -1045,17 +1057,23 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 30 Sep 2014 19:54:38 GMT
+      - Sat, 26 Sep 2015 17:37:51 GMT
       Etag:
-      - '"205814927"'
-      Server:
-      - nginx/1.4.7
+      - '"579777948"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1176'
+      X-Ratelimit-Reset:
+      - '1443289122'
       Content-Length:
       - '11498'
       Connection:
