--- a/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_section_s_students.yml
+++ b/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_section_s_students.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -25,24 +25,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:49 GMT
+      - Sat, 26 Sep 2015 17:37:20 GMT
       Etag:
-      - ! '"1525695678"'
-      Server:
-      - nginx/1.4.7
+      - '"-682802249"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1127'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '113738'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"course_name":"Group Guidance","course_number":"101","created":"2014-02-26T21:15:37.927Z","district":"4fd43cc56d11340000000005","grade":"10","last_modified":"2014-08-11T18:35:06.714Z","name":"Group
+      encoding: UTF-8
+      string: '{"data":[{"data":{"course_name":"Group Guidance","course_number":"101","created":"2014-02-26T21:15:37.927Z","district":"4fd43cc56d11340000000005","grade":"10","last_modified":"2014-08-11T18:35:06.714Z","name":"Group
         Guidance - 101 - B. Greene (Section 1)","period":"0","school":"530e595026403103360ff9fd","sis_id":"581","students":["530e5961049e75a9262cffd9","530e5961049e75a9262d0010","530e5961049e75a9262d004e","530e5961049e75a9262d0080","530e5962049e75a9262d0156","530e5963049e75a9262d01b7","530e5963049e75a9262d0253","530e5966049e75a9262d0418","530e5966049e75a9262d0475","530e5966049e75a9262d04b4","530e5967049e75a9262d0503","530e5968049e75a9262d05e9","530e5968049e75a9262d061f","530e5968049e75a9262d0632","530e5968049e75a9262d0647"],"subject":"homeroom/advisory","teacher":"530e5955d50c310f36112c11","term":{"name":"Y1","start_date":"2012-08-01","end_date":"2013-06-01"},"id":"530e5979049e75a9262d0af2"},"uri":"/v1.1/sections/530e5979049e75a9262d0af2"},{"data":{"course_name":"Group
         Guidance","course_number":"102","created":"2014-02-26T21:15:37.934Z","district":"4fd43cc56d11340000000005","grade":"10","last_modified":"2014-02-26T21:15:37.936Z","name":"Group
         Guidance - 102 - T. Vaux (Section 2)","period":"0","school":"530e595026403103360ff9fd","sis_id":"582","students":["530e5960049e75a9262cff4f","530e5960049e75a9262cff95","530e5961049e75a9262cffe0","530e5961049e75a9262d0027","530e5961049e75a9262d008d","530e5963049e75a9262d0180","530e5964049e75a9262d0300","530e5964049e75a9262d0302","530e5964049e75a9262d0304","530e5965049e75a9262d039e","530e5965049e75a9262d03b6","530e5965049e75a9262d03e8","530e5966049e75a9262d040c","530e5966049e75a9262d04cc","530e5967049e75a9262d05c0","530e5968049e75a9262d062f"],"subject":"homeroom/advisory","teacher":"530e5955d50c310f36112c12","term":{"name":"Y1","start_date":"2012-08-01","end_date":"2013-06-01"},"id":"530e5979049e75a9262d0af3"},"uri":"/v1.1/sections/530e5979049e75a9262d0af3"},{"data":{"course_name":"Group
@@ -315,7 +321,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -332,24 +338,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:49 GMT
+      - Sat, 26 Sep 2015 17:37:20 GMT
       Etag:
-      - ! '"-1019123713"'
-      Server:
-      - nginx/1.4.7
+      - '"93377604"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1126'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '1343'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":{"course_name":"Group Guidance","course_number":"101","created":"2014-02-26T21:15:37.927Z","district":"4fd43cc56d11340000000005","grade":"10","last_modified":"2014-08-11T18:35:06.714Z","name":"Group
+      encoding: UTF-8
+      string: '{"data":{"course_name":"Group Guidance","course_number":"101","created":"2014-02-26T21:15:37.927Z","district":"4fd43cc56d11340000000005","grade":"10","last_modified":"2014-08-11T18:35:06.714Z","name":"Group
         Guidance - 101 - B. Greene (Section 1)","period":"0","school":"530e595026403103360ff9fd","sis_id":"581","students":["530e5961049e75a9262cffd9","530e5961049e75a9262d0010","530e5961049e75a9262d004e","530e5961049e75a9262d0080","530e5962049e75a9262d0156","530e5963049e75a9262d01b7","530e5963049e75a9262d0253","530e5966049e75a9262d0418","530e5966049e75a9262d0475","530e5966049e75a9262d04b4","530e5967049e75a9262d0503","530e5968049e75a9262d05e9","530e5968049e75a9262d061f","530e5968049e75a9262d0632","530e5968049e75a9262d0647"],"subject":"homeroom/advisory","teacher":"530e5955d50c310f36112c11","term":{"name":"Y1","start_date":"2012-08-01","end_date":"2013-06-01"},"id":"530e5979049e75a9262d0af2"},"links":[{"rel":"self","uri":"/v1.1/sections/530e5979049e75a9262d0af2"},{"rel":"district","uri":"/v1.1/sections/530e5979049e75a9262d0af2/district"},{"rel":"teacher","uri":"/v1.1/sections/530e5979049e75a9262d0af2/teacher"},{"rel":"students","uri":"/v1.1/sections/530e5979049e75a9262d0af2/students"},{"rel":"school","uri":"/v1.1/sections/530e5979049e75a9262d0af2/school"},{"rel":"events","uri":"/v1.1/sections/530e5979049e75a9262d0af2/events"}]}'
     http_version: 
   recorded_at: Sat, 13 Sep 2014 00:07:49 GMT
@@ -361,7 +373,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -378,24 +390,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:50 GMT
+      - Sat, 26 Sep 2015 17:37:21 GMT
       Etag:
-      - ! '"1856985347"'
-      Server:
-      - nginx/1.4.7
+      - '"-1445533152"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1125'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '10050'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"created":"2014-02-26T21:15:13.166Z","credentials":{"district_username":"williamk46","district_password":"bohjah7Ae"},"district":"4fd43cc56d11340000000005","dob":"12/5/1997","ell_status":"Y","email":"k_william@example.org","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.046Z","location":{"zip":"11429"},"name":{"first":"William","middle":"S","last":"Koelpin"},"race":"Black
+      encoding: UTF-8
+      string: '{"data":[{"data":{"created":"2014-02-26T21:15:13.166Z","credentials":{"district_username":"williamk46","district_password":"bohjah7Ae"},"district":"4fd43cc56d11340000000005","dob":"12/5/1997","ell_status":"Y","email":"k_william@example.org","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.046Z","location":{"zip":"11429"},"name":{"first":"William","middle":"S","last":"Koelpin"},"race":"Black
         or African American","school":"530e595026403103360ff9fd","sis_id":"182397746","state_id":"799666284","student_number":"182397746","id":"530e5961049e75a9262cffd9"},"uri":"/v1.1/students/530e5961049e75a9262cffd9"},{"data":{"created":"2014-02-26T21:15:13.413Z","credentials":{"district_username":"lawerencew39","district_password":"aiQuu5aht"},"district":"4fd43cc56d11340000000005","dob":"3/4/1997","ell_status":"N","email":"w.lawerence@example.net","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.177Z","location":{"zip":"10467"},"name":{"first":"Lawerence","middle":"F","last":"Weber"},"race":"Caucasian","school":"530e595026403103360ff9fd","sis_id":"217818439","state_id":"353535663","student_number":"217818439","id":"530e5961049e75a9262d0010"},"uri":"/v1.1/students/530e5961049e75a9262d0010"},{"data":{"created":"2014-02-26T21:15:13.672Z","credentials":{"district_username":"douglasg71","district_password":"AhxahR7Th"},"district":"4fd43cc56d11340000000005","dob":"10/24/1997","ell_status":"Y","email":"g_douglas@example.org","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.296Z","location":{"zip":"10468"},"name":{"first":"Douglas","middle":"M","last":"Gusikowski"},"race":"Caucasian","school":"530e595026403103360ff9fd","sis_id":"243865571","state_id":"621454258","student_number":"243865571","id":"530e5961049e75a9262d004e"},"uri":"/v1.1/students/530e5961049e75a9262d004e"},{"data":{"created":"2014-02-26T21:15:13.887Z","credentials":{"district_username":"lindag76","district_password":"ohgiLai3Doo"},"district":"4fd43cc56d11340000000005","dob":"12/5/1997","ell_status":"Y","email":"g_linda@example.net","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.386Z","location":{"zip":"11237"},"name":{"first":"Linda","middle":"S","last":"Glover"},"race":"Asian","school":"530e595026403103360ff9fd","sis_id":"270438076","state_id":"613582425","student_number":"270438076","id":"530e5961049e75a9262d0080"},"uri":"/v1.1/students/530e5961049e75a9262d0080"},{"data":{"created":"2014-02-26T21:15:14.800Z","credentials":{"district_username":"maryk07","district_password":"Woh0Gaic"},"district":"4fd43cc56d11340000000005","dob":"4/24/1997","ell_status":"N","email":"k_mary@example.org","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:41.840Z","location":{"zip":"10011"},"name":{"first":"Mary","middle":"J","last":"Kreiger"},"race":"Two
         or More Races","school":"530e595026403103360ff9fd","sis_id":"360005607","state_id":"722234185","student_number":"360005607","id":"530e5962049e75a9262d0156"},"uri":"/v1.1/students/530e5962049e75a9262d0156"},{"data":{"created":"2014-02-26T21:15:15.231Z","credentials":{"district_username":"geraldines07","district_password":"xiuN0een9p"},"district":"4fd43cc56d11340000000005","dob":"4/12/1997","ell_status":"Y","email":"geraldine.s@example.org","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:42.029Z","location":{"zip":"10002"},"name":{"first":"Geraldine","middle":"J","last":"Schowalter"},"race":"Black
         or African American","school":"530e595026403103360ff9fd","sis_id":"402261307","state_id":"440879170","student_number":"402261307","id":"530e5963049e75a9262d01b7"},"uri":"/v1.1/students/530e5963049e75a9262d01b7"},{"data":{"created":"2014-02-26T21:15:15.914Z","credentials":{"district_username":"reginac63","district_password":"Vaeye8quo0z"},"district":"4fd43cc56d11340000000005","dob":"1/13/1997","ell_status":"N","email":"regina_c@example.net","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:42.386Z","location":{"zip":"10024"},"name":{"first":"Regina","middle":"K","last":"Cummings"},"race":"American
@@ -415,7 +433,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -448,8 +466,8 @@ http_interactions:
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"created":"2014-02-26T21:15:13.166Z","credentials":{"district_username":"williamk46","district_password":"bohjah7Ae"},"district":"4fd43cc56d11340000000005","dob":"12/5/1997","ell_status":"Y","email":"k_william@example.org","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.046Z","location":{"zip":"11429"},"name":{"first":"William","middle":"S","last":"Koelpin"},"race":"Black
+      encoding: UTF-8
+      string: '{"data":[{"data":{"created":"2014-02-26T21:15:13.166Z","credentials":{"district_username":"williamk46","district_password":"bohjah7Ae"},"district":"4fd43cc56d11340000000005","dob":"12/5/1997","ell_status":"Y","email":"k_william@example.org","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.046Z","location":{"zip":"11429"},"name":{"first":"William","middle":"S","last":"Koelpin"},"race":"Black
         or African American","school":"530e595026403103360ff9fd","sis_id":"182397746","state_id":"799666284","student_number":"182397746","id":"530e5961049e75a9262cffd9"},"uri":"/v1.1/students/530e5961049e75a9262cffd9"},{"data":{"created":"2014-02-26T21:15:13.413Z","credentials":{"district_username":"lawerencew39","district_password":"aiQuu5aht"},"district":"4fd43cc56d11340000000005","dob":"3/4/1997","ell_status":"N","email":"w.lawerence@example.net","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.177Z","location":{"zip":"10467"},"name":{"first":"Lawerence","middle":"F","last":"Weber"},"race":"Caucasian","school":"530e595026403103360ff9fd","sis_id":"217818439","state_id":"353535663","student_number":"217818439","id":"530e5961049e75a9262d0010"},"uri":"/v1.1/students/530e5961049e75a9262d0010"},{"data":{"created":"2014-02-26T21:15:13.672Z","credentials":{"district_username":"douglasg71","district_password":"AhxahR7Th"},"district":"4fd43cc56d11340000000005","dob":"10/24/1997","ell_status":"Y","email":"g_douglas@example.org","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.296Z","location":{"zip":"10468"},"name":{"first":"Douglas","middle":"M","last":"Gusikowski"},"race":"Caucasian","school":"530e595026403103360ff9fd","sis_id":"243865571","state_id":"621454258","student_number":"243865571","id":"530e5961049e75a9262d004e"},"uri":"/v1.1/students/530e5961049e75a9262d004e"},{"data":{"created":"2014-02-26T21:15:13.887Z","credentials":{"district_username":"lindag76","district_password":"ohgiLai3Doo"},"district":"4fd43cc56d11340000000005","dob":"12/5/1997","ell_status":"Y","email":"g_linda@example.net","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.386Z","location":{"zip":"11237"},"name":{"first":"Linda","middle":"S","last":"Glover"},"race":"Asian","school":"530e595026403103360ff9fd","sis_id":"270438076","state_id":"613582425","student_number":"270438076","id":"530e5961049e75a9262d0080"},"uri":"/v1.1/students/530e5961049e75a9262d0080"},{"data":{"created":"2014-02-26T21:15:14.800Z","credentials":{"district_username":"maryk07","district_password":"Woh0Gaic"},"district":"4fd43cc56d11340000000005","dob":"4/24/1997","ell_status":"N","email":"k_mary@example.org","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:41.840Z","location":{"zip":"10011"},"name":{"first":"Mary","middle":"J","last":"Kreiger"},"race":"Two
         or More Races","school":"530e595026403103360ff9fd","sis_id":"360005607","state_id":"722234185","student_number":"360005607","id":"530e5962049e75a9262d0156"},"uri":"/v1.1/students/530e5962049e75a9262d0156"},{"data":{"created":"2014-02-26T21:15:15.231Z","credentials":{"district_username":"geraldines07","district_password":"xiuN0een9p"},"district":"4fd43cc56d11340000000005","dob":"4/12/1997","ell_status":"Y","email":"geraldine.s@example.org","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:42.029Z","location":{"zip":"10002"},"name":{"first":"Geraldine","middle":"J","last":"Schowalter"},"race":"Black
         or African American","school":"530e595026403103360ff9fd","sis_id":"402261307","state_id":"440879170","student_number":"402261307","id":"530e5963049e75a9262d01b7"},"uri":"/v1.1/students/530e5963049e75a9262d01b7"},{"data":{"created":"2014-02-26T21:15:15.914Z","credentials":{"district_username":"reginac63","district_password":"Vaeye8quo0z"},"district":"4fd43cc56d11340000000005","dob":"1/13/1997","ell_status":"N","email":"regina_c@example.net","frl_status":"Paid","gender":"F","grade":"10","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:42.386Z","location":{"zip":"10024"},"name":{"first":"Regina","middle":"K","last":"Cummings"},"race":"American
