--- a/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_student_s_sections.yml
+++ b/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_student_s_sections.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -25,24 +25,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:36 GMT
+      - Sat, 26 Sep 2015 17:37:41 GMT
       Etag:
-      - ! '"-1704869160"'
-      Server:
-      - nginx/1.4.7
+      - '"-1672977800"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1072'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '66289'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"created":"2014-02-26T21:15:12.346Z","credentials":{"district_username":"stevez33","district_password":"auyik3tiTieL"},"district":"4fd43cc56d11340000000005","dob":"2/11/2007","ell_status":"N","email":"z.steve@example.net","frl_status":"Paid","gender":"M","grade":"Kindergarten","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.656Z","location":{"zip":"10459"},"name":{"first":"Steve","middle":"G","last":"Ziemann"},"race":"Black
+      encoding: UTF-8
+      string: '{"data":[{"data":{"created":"2014-02-26T21:15:12.346Z","credentials":{"district_username":"stevez33","district_password":"auyik3tiTieL"},"district":"4fd43cc56d11340000000005","dob":"2/11/2007","ell_status":"N","email":"z.steve@example.net","frl_status":"Paid","gender":"M","grade":"Kindergarten","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.656Z","location":{"zip":"10459"},"name":{"first":"Steve","middle":"G","last":"Ziemann"},"race":"Black
         or African American","school":"530e595026403103360ff9fe","sis_id":"100095233","state_id":"231786324","student_number":"100095233","id":"530e5960049e75a9262cff1d"},"uri":"/v1.1/students/530e5960049e75a9262cff1d"},{"data":{"created":"2014-02-26T21:15:12.358Z","credentials":{"district_username":"douglasw58","district_password":"ahFii2nae"},"district":"4fd43cc56d11340000000005","dob":"6/18/1998","ell_status":"Y","email":"w_douglas@example.net","frl_status":"Paid","gender":"M","grade":"9","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:40.661Z","location":{"zip":"11004"},"name":{"first":"Douglas","middle":"S","last":"Wisoky"},"race":"Caucasian","school":"530e595026403103360ff9fd","sis_id":"101565758","state_id":"498006597","student_number":"101565758","id":"530e5960049e75a9262cff1e"},"uri":"/v1.1/students/530e5960049e75a9262cff1e"},{"data":{"created":"2014-02-26T21:15:12.368Z","credentials":{"district_username":"joel42","district_password":"CaaDie0eboo"},"district":"4fd43cc56d11340000000005","dob":"7/4/1997","ell_status":"Y","email":"l.joe@example.net","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:40.664Z","location":{"zip":"10473"},"name":{"first":"Joe","middle":"S","last":"Lakin"},"race":"Black
         or African American","school":"530e595026403103360ff9fd","sis_id":"106078142","state_id":"635493722","student_number":"106078142","id":"530e5960049e75a9262cff1f"},"uri":"/v1.1/students/530e5960049e75a9262cff1f"},{"data":{"created":"2014-02-26T21:15:12.374Z","credentials":{"district_username":"evalynb40","district_password":"ooXahwook2"},"district":"4fd43cc56d11340000000005","dob":"8/10/2006","ell_status":"N","email":"b_evalyn@example.org","frl_status":"Paid","gender":"F","grade":"1","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:40.668Z","location":{"zip":"10029"},"name":{"first":"Evalyn","middle":"J","last":"Bradtke"},"race":"Black
         or African American","school":"530e595026403103360ff9fe","sis_id":"106091540","state_id":"552729322","student_number":"106091540","id":"530e5960049e75a9262cff20"},"uri":"/v1.1/students/530e5960049e75a9262cff20"},{"data":{"created":"2014-02-26T21:15:12.382Z","credentials":{"district_username":"coryt00","district_password":"ahW1taesao5"},"district":"4fd43cc56d11340000000005","dob":"7/21/1997","ell_status":"Y","email":"cory_t@example.net","frl_status":"Paid","gender":"M","grade":"10","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.673Z","location":{"zip":"10038"},"name":{"first":"Cory","middle":"V","last":"Thompson"},"race":"Black
@@ -124,7 +130,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -141,24 +147,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:36 GMT
+      - Sat, 26 Sep 2015 17:37:41 GMT
       Etag:
-      - ! '"1850740737"'
-      Server:
-      - nginx/1.4.7
+      - '"558167227"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1071'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '1151'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":{"created":"2014-02-26T21:15:12.346Z","credentials":{"district_username":"stevez33","district_password":"auyik3tiTieL"},"district":"4fd43cc56d11340000000005","dob":"2/11/2007","ell_status":"N","email":"z.steve@example.net","frl_status":"Paid","gender":"M","grade":"Kindergarten","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.656Z","location":{"zip":"10459"},"name":{"first":"Steve","middle":"G","last":"Ziemann"},"race":"Black
+      encoding: UTF-8
+      string: '{"data":{"created":"2014-02-26T21:15:12.346Z","credentials":{"district_username":"stevez33","district_password":"auyik3tiTieL"},"district":"4fd43cc56d11340000000005","dob":"2/11/2007","ell_status":"N","email":"z.steve@example.net","frl_status":"Paid","gender":"M","grade":"Kindergarten","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.656Z","location":{"zip":"10459"},"name":{"first":"Steve","middle":"G","last":"Ziemann"},"race":"Black
         or African American","school":"530e595026403103360ff9fe","sis_id":"100095233","state_id":"231786324","student_number":"100095233","id":"530e5960049e75a9262cff1d"},"links":[{"rel":"self","uri":"/v1.1/students/530e5960049e75a9262cff1d"},{"rel":"district","uri":"/v1.1/students/530e5960049e75a9262cff1d/district"},{"rel":"sections","uri":"/v1.1/students/530e5960049e75a9262cff1d/sections"},{"rel":"school","uri":"/v1.1/students/530e5960049e75a9262cff1d/school"},{"rel":"teachers","uri":"/v1.1/students/530e5960049e75a9262cff1d/teachers"},{"rel":"contacts","uri":"/v1.1/students/530e5960049e75a9262cff1d/contacts"},{"rel":"events","uri":"/v1.1/students/530e5960049e75a9262cff1d/events"}]}'
     http_version: 
   recorded_at: Sat, 13 Sep 2014 00:07:36 GMT
@@ -170,7 +182,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -187,24 +199,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:36 GMT
+      - Sat, 26 Sep 2015 17:37:42 GMT
       Etag:
-      - ! '"-1121195810"'
-      Server:
-      - nginx/1.4.7
+      - '"-1046366735"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1070'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '5801'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"course_name":"Class 002, Homeroom","course_number":"2","created":"2014-02-26T21:15:38.469Z","district":"4fd43cc56d11340000000005","grade":"Kindergarten","last_modified":"2014-02-26T21:15:38.472Z","name":"Class
+      encoding: UTF-8
+      string: '{"data":[{"data":{"course_name":"Class 002, Homeroom","course_number":"2","created":"2014-02-26T21:15:38.469Z","district":"4fd43cc56d11340000000005","grade":"Kindergarten","last_modified":"2014-02-26T21:15:38.472Z","name":"Class
         002, Homeroom - 002 - S. Schoen (Section 2)","period":"0","school":"530e595026403103360ff9fe","sis_id":"709","students":["530e5960049e75a9262cff1d","530e5960049e75a9262cff55","530e5961049e75a9262cffc2","530e5961049e75a9262d0012","530e5962049e75a9262d00c0","530e5962049e75a9262d010d","530e5962049e75a9262d0136","530e5962049e75a9262d0151","530e5962049e75a9262d0162","530e5963049e75a9262d01bb","530e5963049e75a9262d01f0","530e5964049e75a9262d0295","530e5964049e75a9262d02a7","530e5964049e75a9262d02d8","530e5965049e75a9262d0320","530e5965049e75a9262d03b9","530e5966049e75a9262d0491","530e5966049e75a9262d04c4","530e5967049e75a9262d0520","530e5968049e75a9262d0615"],"subject":"homeroom/advisory","teacher":"530e5955d50c310f36112c03","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0b71"},"uri":"/v1.1/sections/530e597a049e75a9262d0b71"},{"data":{"course_name":"Kindergarten
         Math, Class 002","course_number":"2","created":"2014-02-26T21:15:38.640Z","district":"4fd43cc56d11340000000005","grade":"Kindergarten","last_modified":"2014-02-26T21:15:38.642Z","name":"Kindergarten
         Math, Class 002 - 002 - S. Schoen","period":"1","school":"530e595026403103360ff9fe","sis_id":"748","students":["530e5960049e75a9262cff1d","530e5960049e75a9262cff55","530e5961049e75a9262cffc2","530e5961049e75a9262d0012","530e5962049e75a9262d00c0","530e5962049e75a9262d010d","530e5962049e75a9262d0136","530e5962049e75a9262d0151","530e5962049e75a9262d0162","530e5963049e75a9262d01bb","530e5963049e75a9262d01f0","530e5964049e75a9262d0295","530e5964049e75a9262d02a7","530e5964049e75a9262d02d8","530e5965049e75a9262d0320","530e5965049e75a9262d03b9","530e5966049e75a9262d0491","530e5966049e75a9262d04c4","530e5967049e75a9262d0520","530e5968049e75a9262d0615"],"subject":"math","teacher":"530e5955d50c310f36112c03","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0b98"},"uri":"/v1.1/sections/530e597a049e75a9262d0b98"},{"data":{"course_name":"Kindergarten
@@ -226,7 +244,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -243,24 +261,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:36 GMT
+      - Sat, 26 Sep 2015 17:37:42 GMT
       Etag:
-      - ! '"-1121195810"'
-      Server:
-      - nginx/1.4.7
+      - '"-1046366735"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1199'
+      X-Ratelimit-Reset:
+      - '1443289122'
       Content-Length:
       - '5801'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"course_name":"Class 002, Homeroom","course_number":"2","created":"2014-02-26T21:15:38.469Z","district":"4fd43cc56d11340000000005","grade":"Kindergarten","last_modified":"2014-02-26T21:15:38.472Z","name":"Class
+      encoding: UTF-8
+      string: '{"data":[{"data":{"course_name":"Class 002, Homeroom","course_number":"2","created":"2014-02-26T21:15:38.469Z","district":"4fd43cc56d11340000000005","grade":"Kindergarten","last_modified":"2014-02-26T21:15:38.472Z","name":"Class
         002, Homeroom - 002 - S. Schoen (Section 2)","period":"0","school":"530e595026403103360ff9fe","sis_id":"709","students":["530e5960049e75a9262cff1d","530e5960049e75a9262cff55","530e5961049e75a9262cffc2","530e5961049e75a9262d0012","530e5962049e75a9262d00c0","530e5962049e75a9262d010d","530e5962049e75a9262d0136","530e5962049e75a9262d0151","530e5962049e75a9262d0162","530e5963049e75a9262d01bb","530e5963049e75a9262d01f0","530e5964049e75a9262d0295","530e5964049e75a9262d02a7","530e5964049e75a9262d02d8","530e5965049e75a9262d0320","530e5965049e75a9262d03b9","530e5966049e75a9262d0491","530e5966049e75a9262d04c4","530e5967049e75a9262d0520","530e5968049e75a9262d0615"],"subject":"homeroom/advisory","teacher":"530e5955d50c310f36112c03","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0b71"},"uri":"/v1.1/sections/530e597a049e75a9262d0b71"},{"data":{"course_name":"Kindergarten
         Math, Class 002","course_number":"2","created":"2014-02-26T21:15:38.640Z","district":"4fd43cc56d11340000000005","grade":"Kindergarten","last_modified":"2014-02-26T21:15:38.642Z","name":"Kindergarten
         Math, Class 002 - 002 - S. Schoen","period":"1","school":"530e595026403103360ff9fe","sis_id":"748","students":["530e5960049e75a9262cff1d","530e5960049e75a9262cff55","530e5961049e75a9262cffc2","530e5961049e75a9262d0012","530e5962049e75a9262d00c0","530e5962049e75a9262d010d","530e5962049e75a9262d0136","530e5962049e75a9262d0151","530e5962049e75a9262d0162","530e5963049e75a9262d01bb","530e5963049e75a9262d01f0","530e5964049e75a9262d0295","530e5964049e75a9262d02a7","530e5964049e75a9262d02d8","530e5965049e75a9262d0320","530e5965049e75a9262d03b9","530e5966049e75a9262d0491","530e5966049e75a9262d04c4","530e5967049e75a9262d0520","530e5968049e75a9262d0615"],"subject":"math","teacher":"530e5955d50c310f36112c03","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0b98"},"uri":"/v1.1/sections/530e597a049e75a9262d0b98"},{"data":{"course_name":"Kindergarten
