--- a/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_teacher_s_sections.yml
+++ b/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_teacher_s_sections.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -25,24 +25,28 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:37 GMT
-      Etag:
-      - ! '"-409931571"'
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:22 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1123'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '44617'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
+      encoding: UTF-8
+      string: '{"data":[{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
         3 Common Branch Teacher","id":"509fbd7ec474fab64a8e9d53"},"uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53"},{"data":{"created":"2012-11-27T15:04:48.474Z","credentials":{"district_password":"OMeitoo3v","district_username":"reuben.conn"},"district":"4fd43cc56d11340000000005","email":"conn_reuben@example.net","last_modified":"2014-02-26T21:15:01.234Z","name":{"first":"Reuben","last":"Conn","middle":"K"},"school":"530e595026403103360ff9ff","sis_id":"33","teacher_number":"215041","title":"Grade
         8 Mathematics Teacher","id":"50b4d690ad221ab95f1c6c39"},"uri":"/v1.1/teachers/50b4d690ad221ab95f1c6c39"},{"data":{"created":"2012-12-01T15:02:36.961Z","credentials":{"district_password":"ru3o8rusbf","district_username":"steven.ogden"},"district":"4fd43cc56d11340000000005","email":"ogden_steven@example.net","last_modified":"2014-02-26T21:15:01.485Z","name":{"first":"Steven","last":"Ogden","middle":"Q"},"school":"530e595026403103360ff9fd","sis_id":"81","teacher_number":"474958","title":"High
         School Science Teacher","id":"50ba1c0c4eda5d94372227eb"},"uri":"/v1.1/teachers/50ba1c0c4eda5d94372227eb"},{"data":{"created":"2012-12-05T15:00:02.670Z","credentials":{"district_password":"Coo0ooyahgh","district_username":"hauck.haylie"},"district":"4fd43cc56d11340000000005","email":"hauck.haylie@example.com","last_modified":"2014-02-26T21:15:01.358Z","name":{"first":"Haylie","last":"Hauck","middle":"J"},"school":"530e595026403103360ff9fd","sis_id":"48","teacher_number":"830340","title":"Grade
@@ -142,7 +146,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -159,22 +163,28 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:37 GMT
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:22 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1122'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '972'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
+      encoding: UTF-8
+      string: '{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
         3 Common Branch Teacher","id":"509fbd7ec474fab64a8e9d53"},"links":[{"rel":"self","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53"},{"rel":"district","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/district"},{"rel":"school","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/school"},{"rel":"students","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/students"},{"rel":"sections","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/sections"},{"rel":"grade_levels","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/grade_levels"},{"rel":"events","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/events"}]}'
     http_version: 
   recorded_at: Sat, 13 Sep 2014 00:07:37 GMT
@@ -186,7 +196,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -203,24 +213,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:37 GMT
+      - Sat, 26 Sep 2015 17:37:23 GMT
       Etag:
-      - ! '"517917419"'
-      Server:
-      - nginx/1.4.7
+      - '"-1262236172"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1121'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '7021'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"course_name":"Class 303, Homeroom","course_number":"303","created":"2014-02-26T21:15:38.560Z","district":"4fd43cc56d11340000000005","grade":"3","last_modified":"2014-02-26T21:15:38.562Z","name":"Class
+      encoding: UTF-8
+      string: '{"data":[{"data":{"course_name":"Class 303, Homeroom","course_number":"303","created":"2014-02-26T21:15:38.560Z","district":"4fd43cc56d11340000000005","grade":"3","last_modified":"2014-02-26T21:15:38.562Z","name":"Class
         303, Homeroom - 303 - L. Spinka (Section 3)","period":"0","school":"530e595026403103360ff9fe","sis_id":"728","students":["530e5960049e75a9262cff3e","530e5961049e75a9262d0067","530e5962049e75a9262d00a2","530e5962049e75a9262d00b0","530e5962049e75a9262d00f0","530e5962049e75a9262d0117","530e5962049e75a9262d0131","530e5963049e75a9262d0188","530e5963049e75a9262d01c3","530e5964049e75a9262d02b0","530e5964049e75a9262d02d7","530e5964049e75a9262d02f1","530e5965049e75a9262d03c1","530e5965049e75a9262d03c4","530e5966049e75a9262d0445","530e5967049e75a9262d0541","530e5967049e75a9262d05c2","530e5968049e75a9262d05fd","530e5968049e75a9262d0624","530e5968049e75a9262d063d","530e5968049e75a9262d063e"],"subject":"homeroom/advisory","teacher":"509fbd7ec474fab64a8e9d53","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0b84"},"uri":"/v1.1/sections/530e597a049e75a9262d0b84"},{"data":{"course_name":"Grade
         3 Math, Class 303","course_number":"303","created":"2014-02-26T21:15:38.748Z","district":"4fd43cc56d11340000000005","grade":"3","last_modified":"2014-02-26T21:15:38.751Z","name":"Grade
         3 Math, Class 303 - 303 - L. Spinka","period":"5","school":"530e595026403103360ff9fe","sis_id":"773","students":["530e5960049e75a9262cff3e","530e5961049e75a9262d0067","530e5962049e75a9262d00a2","530e5962049e75a9262d00b0","530e5962049e75a9262d00f0","530e5962049e75a9262d0117","530e5962049e75a9262d0131","530e5963049e75a9262d0188","530e5963049e75a9262d01c3","530e5964049e75a9262d02b0","530e5964049e75a9262d02d7","530e5964049e75a9262d02f1","530e5965049e75a9262d03c1","530e5965049e75a9262d03c4","530e5966049e75a9262d0445","530e5967049e75a9262d0541","530e5967049e75a9262d05c2","530e5968049e75a9262d05fd","530e5968049e75a9262d0624","530e5968049e75a9262d063d","530e5968049e75a9262d063e"],"subject":"math","teacher":"509fbd7ec474fab64a8e9d53","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0bb1"},"uri":"/v1.1/sections/530e597a049e75a9262d0bb1"},{"data":{"course_name":"Grade
@@ -245,7 +261,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -262,24 +278,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:37 GMT
+      - Sat, 26 Sep 2015 17:37:23 GMT
       Etag:
-      - ! '"517917419"'
-      Server:
-      - nginx/1.4.7
+      - '"-1262236172"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1120'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '7021'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"course_name":"Class 303, Homeroom","course_number":"303","created":"2014-02-26T21:15:38.560Z","district":"4fd43cc56d11340000000005","grade":"3","last_modified":"2014-02-26T21:15:38.562Z","name":"Class
+      encoding: UTF-8
+      string: '{"data":[{"data":{"course_name":"Class 303, Homeroom","course_number":"303","created":"2014-02-26T21:15:38.560Z","district":"4fd43cc56d11340000000005","grade":"3","last_modified":"2014-02-26T21:15:38.562Z","name":"Class
         303, Homeroom - 303 - L. Spinka (Section 3)","period":"0","school":"530e595026403103360ff9fe","sis_id":"728","students":["530e5960049e75a9262cff3e","530e5961049e75a9262d0067","530e5962049e75a9262d00a2","530e5962049e75a9262d00b0","530e5962049e75a9262d00f0","530e5962049e75a9262d0117","530e5962049e75a9262d0131","530e5963049e75a9262d0188","530e5963049e75a9262d01c3","530e5964049e75a9262d02b0","530e5964049e75a9262d02d7","530e5964049e75a9262d02f1","530e5965049e75a9262d03c1","530e5965049e75a9262d03c4","530e5966049e75a9262d0445","530e5967049e75a9262d0541","530e5967049e75a9262d05c2","530e5968049e75a9262d05fd","530e5968049e75a9262d0624","530e5968049e75a9262d063d","530e5968049e75a9262d063e"],"subject":"homeroom/advisory","teacher":"509fbd7ec474fab64a8e9d53","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0b84"},"uri":"/v1.1/sections/530e597a049e75a9262d0b84"},{"data":{"course_name":"Grade
         3 Math, Class 303","course_number":"303","created":"2014-02-26T21:15:38.748Z","district":"4fd43cc56d11340000000005","grade":"3","last_modified":"2014-02-26T21:15:38.751Z","name":"Grade
         3 Math, Class 303 - 303 - L. Spinka","period":"5","school":"530e595026403103360ff9fe","sis_id":"773","students":["530e5960049e75a9262cff3e","530e5961049e75a9262d0067","530e5962049e75a9262d00a2","530e5962049e75a9262d00b0","530e5962049e75a9262d00f0","530e5962049e75a9262d0117","530e5962049e75a9262d0131","530e5963049e75a9262d0188","530e5963049e75a9262d01c3","530e5964049e75a9262d02b0","530e5964049e75a9262d02d7","530e5964049e75a9262d02f1","530e5965049e75a9262d03c1","530e5965049e75a9262d03c4","530e5966049e75a9262d0445","530e5967049e75a9262d0541","530e5967049e75a9262d05c2","530e5968049e75a9262d05fd","530e5968049e75a9262d0624","530e5968049e75a9262d063d","530e5968049e75a9262d063e"],"subject":"math","teacher":"509fbd7ec474fab64a8e9d53","term":{"name":"Y1","start_date":"2012-08-01T00:00:00.000Z","end_date":"2013-06-01T00:00:00.000Z"},"id":"530e597a049e75a9262d0bb1"},"uri":"/v1.1/sections/530e597a049e75a9262d0bb1"},{"data":{"course_name":"Grade
