--- a/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_teacher_s_students.yml
+++ b/test/data/vcr_cassettes/Clever_NestedResource/retrieves_a_teacher_s_students.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -25,24 +25,28 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:38 GMT
-      Etag:
-      - ! '"-409931571"'
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:17 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1134'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '44617'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
+      encoding: UTF-8
+      string: '{"data":[{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
         3 Common Branch Teacher","id":"509fbd7ec474fab64a8e9d53"},"uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53"},{"data":{"created":"2012-11-27T15:04:48.474Z","credentials":{"district_password":"OMeitoo3v","district_username":"reuben.conn"},"district":"4fd43cc56d11340000000005","email":"conn_reuben@example.net","last_modified":"2014-02-26T21:15:01.234Z","name":{"first":"Reuben","last":"Conn","middle":"K"},"school":"530e595026403103360ff9ff","sis_id":"33","teacher_number":"215041","title":"Grade
         8 Mathematics Teacher","id":"50b4d690ad221ab95f1c6c39"},"uri":"/v1.1/teachers/50b4d690ad221ab95f1c6c39"},{"data":{"created":"2012-12-01T15:02:36.961Z","credentials":{"district_password":"ru3o8rusbf","district_username":"steven.ogden"},"district":"4fd43cc56d11340000000005","email":"ogden_steven@example.net","last_modified":"2014-02-26T21:15:01.485Z","name":{"first":"Steven","last":"Ogden","middle":"Q"},"school":"530e595026403103360ff9fd","sis_id":"81","teacher_number":"474958","title":"High
         School Science Teacher","id":"50ba1c0c4eda5d94372227eb"},"uri":"/v1.1/teachers/50ba1c0c4eda5d94372227eb"},{"data":{"created":"2012-12-05T15:00:02.670Z","credentials":{"district_password":"Coo0ooyahgh","district_username":"hauck.haylie"},"district":"4fd43cc56d11340000000005","email":"hauck.haylie@example.com","last_modified":"2014-02-26T21:15:01.358Z","name":{"first":"Haylie","last":"Hauck","middle":"J"},"school":"530e595026403103360ff9fd","sis_id":"48","teacher_number":"830340","title":"Grade
@@ -142,7 +146,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -159,22 +163,28 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:38 GMT
-      Server:
-      - nginx/1.4.7
+      - Sat, 26 Sep 2015 17:37:17 GMT
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1133'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '972'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
+      encoding: UTF-8
+      string: '{"data":{"created":"2012-11-11T15:00:14.036Z","credentials":{"district_password":"Acoev0oow4","district_username":"spinka_leo"},"district":"4fd43cc56d11340000000005","email":"spinka.leo@example.net","last_modified":"2014-02-26T21:15:01.038Z","name":{"first":"Leo","last":"Spinka","middle":"R"},"school":"530e595026403103360ff9fe","sis_id":"11","teacher_number":"539224","title":"Grade
         3 Common Branch Teacher","id":"509fbd7ec474fab64a8e9d53"},"links":[{"rel":"self","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53"},{"rel":"district","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/district"},{"rel":"school","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/school"},{"rel":"students","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/students"},{"rel":"sections","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/sections"},{"rel":"grade_levels","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/grade_levels"},{"rel":"events","uri":"/v1.1/teachers/509fbd7ec474fab64a8e9d53/events"}]}'
     http_version: 
   recorded_at: Sat, 13 Sep 2014 00:07:38 GMT
@@ -186,7 +196,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -203,24 +213,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:38 GMT
+      - Sat, 26 Sep 2015 17:37:18 GMT
       Etag:
-      - ! '"-648838959"'
-      Server:
-      - nginx/1.4.7
+      - '"-606603306"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1132'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '14647'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"created":"2014-02-26T21:15:12.512Z","credentials":{"district_username":"robertl13","district_password":"moo2aoLilei"},"district":"4fd43cc56d11340000000005","dob":"1/16/2004","ell_status":"N","email":"l_robert@example.com","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.753Z","location":{"zip":"11103"},"name":{"first":"Robert","middle":"G","last":"Luettgen"},"race":"Caucasian","school":"530e595026403103360ff9fe","sis_id":"119991513","state_id":"402728823","student_number":"119991513","id":"530e5960049e75a9262cff3e"},"uri":"/v1.1/students/530e5960049e75a9262cff3e"},{"data":{"created":"2014-02-26T21:15:13.798Z","credentials":{"district_username":"ericl17","district_password":"jie3huph7Oc"},"district":"4fd43cc56d11340000000005","dob":"5/23/2004","ell_status":"Y","email":"eric.l@example.org","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.354Z","location":{"zip":"11419"},"name":{"first":"Eric","middle":"E","last":"Lindgren"},"race":"Black
+      encoding: UTF-8
+      string: '{"data":[{"data":{"created":"2014-02-26T21:15:12.512Z","credentials":{"district_username":"robertl13","district_password":"moo2aoLilei"},"district":"4fd43cc56d11340000000005","dob":"1/16/2004","ell_status":"N","email":"l_robert@example.com","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.753Z","location":{"zip":"11103"},"name":{"first":"Robert","middle":"G","last":"Luettgen"},"race":"Caucasian","school":"530e595026403103360ff9fe","sis_id":"119991513","state_id":"402728823","student_number":"119991513","id":"530e5960049e75a9262cff3e"},"uri":"/v1.1/students/530e5960049e75a9262cff3e"},{"data":{"created":"2014-02-26T21:15:13.798Z","credentials":{"district_username":"ericl17","district_password":"jie3huph7Oc"},"district":"4fd43cc56d11340000000005","dob":"5/23/2004","ell_status":"Y","email":"eric.l@example.org","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.354Z","location":{"zip":"11419"},"name":{"first":"Eric","middle":"E","last":"Lindgren"},"race":"Black
         or African American","school":"530e595026403103360ff9fe","sis_id":"263559217","state_id":"723046682","student_number":"263559217","id":"530e5961049e75a9262d0067"},"uri":"/v1.1/students/530e5961049e75a9262d0067"},{"data":{"created":"2014-02-26T21:15:14.041Z","credentials":{"district_username":"ethans60","district_password":"iv5ooga4Ie"},"district":"4fd43cc56d11340000000005","dob":"10/19/2004","ell_status":"N","email":"s_ethan@example.com","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.470Z","location":{"zip":"10465"},"name":{"first":"Ethan","middle":"S","last":"Stokes"},"race":"Caucasian","school":"530e595026403103360ff9fe","sis_id":"281770560","state_id":"424914041","student_number":"281770560","id":"530e5962049e75a9262d00a2"},"uri":"/v1.1/students/530e5962049e75a9262d00a2"},{"data":{"created":"2014-02-26T21:15:14.082Z","credentials":{"district_username":"margaretk42","district_password":"hem6rie4Xa"},"district":"4fd43cc56d11340000000005","dob":"6/2/2004","ell_status":"Y","email":"margaret_k@example.net","frl_status":"Paid","gender":"F","grade":"3","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:41.501Z","location":{"zip":"11103"},"name":{"first":"Margaret","middle":"W","last":"Klocko"},"race":"Black
         or African American","school":"530e595026403103360ff9fe","sis_id":"284028642","state_id":"373519047","student_number":"284028642","id":"530e5962049e75a9262d00b0"},"uri":"/v1.1/students/530e5962049e75a9262d00b0"},{"data":{"created":"2014-02-26T21:15:14.387Z","credentials":{"district_username":"ruthb55","district_password":"Ves3doom6oh"},"district":"4fd43cc56d11340000000005","dob":"12/22/2004","ell_status":"N","email":"b.ruth@example.com","frl_status":"Paid","gender":"F","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.645Z","location":{"zip":"11217"},"name":{"first":"Ruth","middle":"S","last":"Batz"},"race":"Two
         or More Races","school":"530e595026403103360ff9fe","sis_id":"316354855","state_id":"792742484","student_number":"316354855","id":"530e5962049e75a9262d00f0"},"uri":"/v1.1/students/530e5962049e75a9262d00f0"},{"data":{"created":"2014-02-26T21:15:14.546Z","credentials":{"district_username":"evelyns17","district_password":"Ooph5eof"},"district":"4fd43cc56d11340000000005","dob":"6/24/2004","ell_status":"N","email":"evelyn_s@example.org","frl_status":"Paid","gender":"F","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.728Z","location":{"zip":"10010"},"name":{"first":"Evelyn","middle":"E","last":"Schmidt"},"race":"Two
@@ -246,7 +262,7 @@ http_interactions:
       string: ''
     headers:
       Accept:
-      - ! '*/*; q=0.5, application/xml'
+      - "*/*; q=0.5, application/xml"
       Accept-Encoding:
       - gzip, deflate
       Authorization:
@@ -263,24 +279,30 @@ http_interactions:
       Access-Control-Allow-Methods:
       - GET,PATCH,POST,DELETE
       Access-Control-Allow-Origin:
-      - ! '*'
+      - "*"
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Sat, 13 Sep 2014 00:07:39 GMT
+      - Sat, 26 Sep 2015 17:37:18 GMT
       Etag:
-      - ! '"-648838959"'
-      Server:
-      - nginx/1.4.7
+      - '"-606603306"'
       X-Powered-By:
       - Express
+      X-Ratelimit-Bucket:
+      - bearer
+      X-Ratelimit-Limit:
+      - '1200'
+      X-Ratelimit-Remaining:
+      - '1131'
+      X-Ratelimit-Reset:
+      - '1443289062'
       Content-Length:
       - '14647'
       Connection:
       - keep-alive
     body:
-      encoding: US-ASCII
-      string: ! '{"data":[{"data":{"created":"2014-02-26T21:15:12.512Z","credentials":{"district_username":"robertl13","district_password":"moo2aoLilei"},"district":"4fd43cc56d11340000000005","dob":"1/16/2004","ell_status":"N","email":"l_robert@example.com","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.753Z","location":{"zip":"11103"},"name":{"first":"Robert","middle":"G","last":"Luettgen"},"race":"Caucasian","school":"530e595026403103360ff9fe","sis_id":"119991513","state_id":"402728823","student_number":"119991513","id":"530e5960049e75a9262cff3e"},"uri":"/v1.1/students/530e5960049e75a9262cff3e"},{"data":{"created":"2014-02-26T21:15:13.798Z","credentials":{"district_username":"ericl17","district_password":"jie3huph7Oc"},"district":"4fd43cc56d11340000000005","dob":"5/23/2004","ell_status":"Y","email":"eric.l@example.org","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.354Z","location":{"zip":"11419"},"name":{"first":"Eric","middle":"E","last":"Lindgren"},"race":"Black
+      encoding: UTF-8
+      string: '{"data":[{"data":{"created":"2014-02-26T21:15:12.512Z","credentials":{"district_username":"robertl13","district_password":"moo2aoLilei"},"district":"4fd43cc56d11340000000005","dob":"1/16/2004","ell_status":"N","email":"l_robert@example.com","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:40.753Z","location":{"zip":"11103"},"name":{"first":"Robert","middle":"G","last":"Luettgen"},"race":"Caucasian","school":"530e595026403103360ff9fe","sis_id":"119991513","state_id":"402728823","student_number":"119991513","id":"530e5960049e75a9262cff3e"},"uri":"/v1.1/students/530e5960049e75a9262cff3e"},{"data":{"created":"2014-02-26T21:15:13.798Z","credentials":{"district_username":"ericl17","district_password":"jie3huph7Oc"},"district":"4fd43cc56d11340000000005","dob":"5/23/2004","ell_status":"Y","email":"eric.l@example.org","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.354Z","location":{"zip":"11419"},"name":{"first":"Eric","middle":"E","last":"Lindgren"},"race":"Black
         or African American","school":"530e595026403103360ff9fe","sis_id":"263559217","state_id":"723046682","student_number":"263559217","id":"530e5961049e75a9262d0067"},"uri":"/v1.1/students/530e5961049e75a9262d0067"},{"data":{"created":"2014-02-26T21:15:14.041Z","credentials":{"district_username":"ethans60","district_password":"iv5ooga4Ie"},"district":"4fd43cc56d11340000000005","dob":"10/19/2004","ell_status":"N","email":"s_ethan@example.com","frl_status":"Paid","gender":"M","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.470Z","location":{"zip":"10465"},"name":{"first":"Ethan","middle":"S","last":"Stokes"},"race":"Caucasian","school":"530e595026403103360ff9fe","sis_id":"281770560","state_id":"424914041","student_number":"281770560","id":"530e5962049e75a9262d00a2"},"uri":"/v1.1/students/530e5962049e75a9262d00a2"},{"data":{"created":"2014-02-26T21:15:14.082Z","credentials":{"district_username":"margaretk42","district_password":"hem6rie4Xa"},"district":"4fd43cc56d11340000000005","dob":"6/2/2004","ell_status":"Y","email":"margaret_k@example.net","frl_status":"Paid","gender":"F","grade":"3","hispanic_ethnicity":"Y","iep_status":"","last_modified":"2014-06-04T14:10:41.501Z","location":{"zip":"11103"},"name":{"first":"Margaret","middle":"W","last":"Klocko"},"race":"Black
         or African American","school":"530e595026403103360ff9fe","sis_id":"284028642","state_id":"373519047","student_number":"284028642","id":"530e5962049e75a9262d00b0"},"uri":"/v1.1/students/530e5962049e75a9262d00b0"},{"data":{"created":"2014-02-26T21:15:14.387Z","credentials":{"district_username":"ruthb55","district_password":"Ves3doom6oh"},"district":"4fd43cc56d11340000000005","dob":"12/22/2004","ell_status":"N","email":"b.ruth@example.com","frl_status":"Paid","gender":"F","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.645Z","location":{"zip":"11217"},"name":{"first":"Ruth","middle":"S","last":"Batz"},"race":"Two
         or More Races","school":"530e595026403103360ff9fe","sis_id":"316354855","state_id":"792742484","student_number":"316354855","id":"530e5962049e75a9262d00f0"},"uri":"/v1.1/students/530e5962049e75a9262d00f0"},{"data":{"created":"2014-02-26T21:15:14.546Z","credentials":{"district_username":"evelyns17","district_password":"Ooph5eof"},"district":"4fd43cc56d11340000000005","dob":"6/24/2004","ell_status":"N","email":"evelyn_s@example.org","frl_status":"Paid","gender":"F","grade":"3","hispanic_ethnicity":"N","iep_status":"","last_modified":"2014-06-04T14:10:41.728Z","location":{"zip":"10010"},"name":{"first":"Evelyn","middle":"E","last":"Schmidt"},"race":"Two
